sumo/tests/sumo/pedestrian_model/striping/errors/route_invalid_permissions/fcd.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on Thu Jun 29 09:27:24 2017 by SUMO Version dev-SVN-r24952
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
    </input>

    <output>
        <fcd-output value="fcd.xml"/>
    </output>

    <processing>
        <pedestrian.model value="striping"/>
        <pedestrian.striping.dawdling value="0"/>
    </processing>

    <report>
        <xml-validation value="never"/>
        <no-step-log value="true"/>
    </report>

</configuration>
-->

<fcd-export xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/fcd_file.xsd">
</fcd-export>
